<resources>
    <string name="app_name">Finance Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="main_activity_new_entry">New entry</string>
    <string name="main_activity_headline">Overview</string>
    <string name="title_activity_entry_view">Entry</string>
    <string name="entry_activity_safe_entry">Safe entry</string>
    <string name="entry_activity_delete_entry">Delete entry</string>
    <string name="entry_activity_delete_all">Delete all entries</string>

    <string name="entry_activity_enter_new_entry">Enter new entry</string>
    <string name="entry_activity_insert_name">Name: </string>
    <string name="entry_activity_insert_amount">Amount: </string>
    <string name="entry_activity_insert_date">Date: </string>

</resources>
